Added a function wavg for weight averages. Imported S-D-R worksheet

--- a/notebooks/anas_hotel_metrics.ipynb
+++ b/notebooks/anas_hotel_metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -161,6 +161,8 @@
     "# Read in Compset data\n",
     "file_path = os.path.join(data_location, \"Comp-Set-STR-ALL.xlsx\")\n",
     "compset_hm = pd.read_excel(file_path, sheetname = \"Comp-Set OCC-ADR-RevPARv2\")\n",
+    "compset_econ = pd.read_excel(file_path, sheetname = \"Comp-Set S-D-Rv3\")\n",
+    "\n",
     "\n",
     "\n",
     "# Read in Budget data\n",
@@ -174,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -226,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -263,29 +265,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "def wavg(df):\n",
-    "    value = df.iloc[:,0].dropna()\n",
-    "    print value\n",
-    "    weights = df.iloc[:,1].dropna()\n",
-    "    weights = weights.apply(int)\n",
-    "    weights = tuple(weights)\n",
-    "    print weights\n",
-    "    series = pd.Series()\n",
-    "    subdf = value.dropna()\n",
+    "grouped = df.groupby('Date')\n",
     "\n",
-    "    series['np.mean'] = np.mean(subdf)\n",
-    "    #series['np.average (no weights)'] = np.average(subdf)\n",
-    "    #series['np.average (weighted)'] = np.average(subdf, weights)\n",
-    "    #series['np.ma.average (weighted)'] = np.ma.average(subdf, weights) \n",
+    "def wavg(group, weight_column, value_column):\n",
+    "    d = group[value_columns]\n",
+    "    w = group[weight_column]\n",
+    "    return (d * w).sum() / w.sum()\n",
     "\n",
-    "    return series\n",
+    "grouped.apply(wavg)\n",
     "\n",
     "#### So Sexy\n",
     "# # Define a lambda function to compute the weighted mean:\n",
@@ -329,7 +323,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>ADR_CONT</th>\n",
+       "      <th>ADR_GRP</th>\n",
+       "      <th>ADR_TOTAL</th>\n",
+       "      <th>ADR_TRANS</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>OCC_CONT</th>\n",
+       "      <th>OCC_GRP</th>\n",
+       "      <th>OCC_TOTAL</th>\n",
+       "      <th>...</th>\n",
+       "      <th>OCC_TOTAL_MOM</th>\n",
+       "      <th>OCC_GRP_YOY</th>\n",
+       "      <th>OCC_TRANS_YOY</th>\n",
+       "      <th>OCC_TOTAL_YOY</th>\n",
+       "      <th>RevPAR_GRP_MOM</th>\n",
+       "      <th>RevPAR_TRANS_MOM</th>\n",
+       "      <th>RevPAR_TOTAL_MOM</th>\n",
+       "      <th>RevPAR_GRP_YOY</th>\n",
+       "      <th>RevPAR_TRANS_YOY</th>\n",
+       "      <th>RevPAR_TOTAL_YOY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>66.98</td>\n",
+       "      <td>175.24</td>\n",
+       "      <td>154.71</td>\n",
+       "      <td>141.85</td>\n",
+       "      <td>2009-02-01</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.63</td>\n",
+       "      <td>19.82</td>\n",
+       "      <td>47.79</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>50.0</td>\n",
+       "      <td>73.11</td>\n",
+       "      <td>154.33</td>\n",
+       "      <td>142.05</td>\n",
+       "      <td>137.92</td>\n",
+       "      <td>2009-03-01</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.83</td>\n",
+       "      <td>15.67</td>\n",
+       "      <td>49.32</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.032015</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.303685</td>\n",
+       "      <td>0.167397</td>\n",
+       "      <td>-0.052475</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>51.0</td>\n",
+       "      <td>67.78</td>\n",
+       "      <td>153.87</td>\n",
+       "      <td>141.49</td>\n",
+       "      <td>136.70</td>\n",
+       "      <td>2009-04-01</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.65</td>\n",
+       "      <td>19.26</td>\n",
+       "      <td>59.62</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.208840</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.225300</td>\n",
+       "      <td>0.199293</td>\n",
+       "      <td>0.204111</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>52.0</td>\n",
+       "      <td>67.43</td>\n",
+       "      <td>159.85</td>\n",
+       "      <td>147.22</td>\n",
+       "      <td>142.88</td>\n",
+       "      <td>2009-05-01</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>16.91</td>\n",
+       "      <td>55.92</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.062060</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.088057</td>\n",
+       "      <td>0.011422</td>\n",
+       "      <td>-0.024064</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>53.0</td>\n",
+       "      <td>66.60</td>\n",
+       "      <td>155.27</td>\n",
+       "      <td>141.85</td>\n",
+       "      <td>137.27</td>\n",
+       "      <td>2009-06-01</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>17.26</td>\n",
+       "      <td>61.27</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.095672</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.008509</td>\n",
+       "      <td>0.089617</td>\n",
+       "      <td>0.055630</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index  ADR_CONT  ADR_GRP  ADR_TOTAL  ADR_TRANS       Date Month  OCC_CONT  \\\n",
+       "0   49.0     66.98   175.24     154.71     141.85 2009-02-01     2      0.63   \n",
+       "1   50.0     73.11   154.33     142.05     137.92 2009-03-01     3      0.83   \n",
+       "2   51.0     67.78   153.87     141.49     136.70 2009-04-01     4      0.65   \n",
+       "3   52.0     67.43   159.85     147.22     142.88 2009-05-01     5      0.59   \n",
+       "4   53.0     66.60   155.27     141.85     137.27 2009-06-01     6      0.43   \n",
+       "\n",
+       "   OCC_GRP  OCC_TOTAL        ...         OCC_TOTAL_MOM OCC_GRP_YOY  \\\n",
+       "0    19.82      47.79        ...                   NaN         NaN   \n",
+       "1    15.67      49.32        ...              0.032015         NaN   \n",
+       "2    19.26      59.62        ...              0.208840         NaN   \n",
+       "3    16.91      55.92        ...             -0.062060         NaN   \n",
+       "4    17.26      61.27        ...              0.095672         NaN   \n",
+       "\n",
+       "   OCC_TRANS_YOY  OCC_TOTAL_YOY  RevPAR_GRP_MOM  RevPAR_TRANS_MOM  \\\n",
+       "0            NaN            NaN             NaN               NaN   \n",
+       "1            NaN            NaN       -0.303685          0.167397   \n",
+       "2            NaN            NaN        0.225300          0.199293   \n",
+       "3            NaN            NaN       -0.088057          0.011422   \n",
+       "4            NaN            NaN       -0.008509          0.089617   \n",
+       "\n",
+       "   RevPAR_TOTAL_MOM  RevPAR_GRP_YOY  RevPAR_TRANS_YOY  RevPAR_TOTAL_YOY  \n",
+       "0               NaN             NaN               NaN               NaN  \n",
+       "1         -0.052475             NaN               NaN               NaN  \n",
+       "2          0.204111             NaN               NaN               NaN  \n",
+       "3         -0.024064             NaN               NaN               NaN  \n",
+       "4          0.055630             NaN               NaN               NaN  \n",
+       "\n",
+       "[5 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tot_set.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -342,7 +541,7 @@
     "#########################################################################################\n",
     "# Now that metrics are calculated lets create the aggregated set for Annual Averages and Rankings\n",
     "\n",
-    "agg_set['ADR_GRP_ANN'] =     tot_set.groupby(['Region','Year'])['ADR_GRP_YOY'].mean()\n",
+    "agg_set['ADR_GRP_ANN'] =     tot_set.groupby(['Region','Year'])['ADR_GRP_YOY'].apply(wavg, args('Supply','ADR_GRP_YOY'))\n",
     "agg_set['ADR_TRANS_ANN'] =   tot_set.groupby(['Region','Year'])['ADR_TRANS_YOY'].mean()\n",
     "agg_set['ADR_TOTAL_ANN'] =   tot_set.groupby(['Region','Year'])['ADR_TOTAL_YOY'].mean()\n",
     "\n",
@@ -517,9 +716,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -531,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
