Finished the portion of the analysis necessary for a basic delivery, this last file uses micro data

--- a/notebooks/anas_hotel_metrics_final.ipynb
+++ b/notebooks/anas_hotel_metrics_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 197,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +44,6 @@
     "#######################################################\n",
     "# Create Lists of Columns for Subsetting Data for Analysis\n",
     "# Create Mapping of Column Names for Cleanliness\n",
-    "#\n",
     "\n",
     "compset_oar_list = [\n",
     "                   'Date',\n",
@@ -245,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 198,
    "metadata": {
     "collapsed": false
    },
@@ -289,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 199,
    "metadata": {
     "collapsed": false
    },
@@ -329,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 200,
    "metadata": {
     "collapsed": false
    },
@@ -360,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 201,
    "metadata": {
     "collapsed": false
    },
@@ -406,20 +405,20 @@
     "##########################################################################\n",
     "# Compute the metrics year over year percent change\n",
     "\n",
-    "home_agg['GRP_OCC_YOY'] = home_agg['GRP_OCCUPANCY'].pct_change(1)\n",
-    "home_agg['TRANS_OCC_YOY'] = home_agg['TRANS_OCCUPANCY'].pct_change(1)\n",
-    "home_agg['CONT_OCC_YOY'] = home_agg['CONT_OCCUPANCY'].pct_change(1)\n",
-    "home_agg['TOTAL_OCC_YOY'] = home_agg['TOTAL_OCCUPANCY'].pct_change(1)\n",
+    "home_agg['GRP_OCC_YOY'] = home_agg.groupby(['Region'])['GRP_OCCUPANCY'].pct_change(1)\n",
+    "home_agg['TRANS_OCC_YOY'] = home_agg.groupby(['Region'])['TRANS_OCCUPANCY'].pct_change(1)\n",
+    "home_agg['CONT_OCC_YOY'] = home_agg.groupby(['Region'])['CONT_OCCUPANCY'].pct_change(1)\n",
+    "home_agg['TOTAL_OCC_YOY'] = home_agg.groupby(['Region'])['TOTAL_OCCUPANCY'].pct_change(1)\n",
     "\n",
-    "home_agg['GRP_ADR_YOY'] = home_agg['GRP_ADR'].pct_change(1)\n",
-    "home_agg['TRANS_ADR_YOY'] = home_agg['TRANS_ADR'].pct_change(1)\n",
-    "home_agg['CONT_ADR_YOY'] = home_agg['CONT_ADR'].pct_change(1)\n",
-    "home_agg['TOTAL_ADR_YOY'] = home_agg['TOTAL_ADR'].pct_change(1)\n",
+    "home_agg['GRP_ADR_YOY'] = home_agg.groupby(['Region'])['GRP_ADR'].pct_change(1)\n",
+    "home_agg['TRANS_ADR_YOY'] = home_agg.groupby(['Region'])['TRANS_ADR'].pct_change(1)\n",
+    "home_agg['CONT_ADR_YOY'] = home_agg.groupby(['Region'])['CONT_ADR'].pct_change(1)\n",
+    "home_agg['TOTAL_ADR_YOY'] = home_agg.groupby(['Region'])['TOTAL_ADR'].pct_change(1)\n",
     "\n",
-    "home_agg['GRP_RevPAR_YOY'] = home_agg['GRP_RevPAR'].pct_change(1)\n",
-    "home_agg['TRANS_RevPAR_YOY'] = home_agg['TRANS_RevPAR'].pct_change(1)\n",
-    "home_agg['CONT_RevPAR_YOY'] = home_agg['CONT_RevPAR'].pct_change(1)\n",
-    "home_agg['TOTAL_RevPAR_YOY'] = home_agg['TOTAL_RevPAR'].pct_change(1)\n",
+    "home_agg['GRP_RevPAR_YOY'] = home_agg.groupby(['Region'])['GRP_RevPAR'].pct_change(1)\n",
+    "home_agg['TRANS_RevPAR_YOY'] = home_agg.groupby(['Region'])['TRANS_RevPAR'].pct_change(1)\n",
+    "home_agg['CONT_RevPAR_YOY'] = home_agg.groupby(['Region'])['CONT_RevPAR'].pct_change(1)\n",
+    "home_agg['TOTAL_RevPAR_YOY'] = home_agg.groupby(['Region'])['TOTAL_RevPAR'].pct_change(1)\n",
     "home_agg = home_agg[column_order]\n",
     "#Create Excel Sheet\n",
     "home_agg.to_excel(writer, 'City-County Monterey Agg', index=False)"
@@ -427,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 202,
    "metadata": {
     "collapsed": false
    },
@@ -615,10 +614,11 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -630,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
