--- a/notebooks/anas_hotel_metrics_final.ipynb
+++ b/notebooks/anas_hotel_metrics_final.ipynb
@@ -165,14 +165,11 @@
     "file_path = os.path.join(data_location, \"TID_BUDGET.xlsx\")\n",
     "budget = pd.read_excel(file_path, sheetname = \"income\")\n",
     "\n",
-    "#Helper Data to expand number of years so they are even for excel viz\n",
+    "# Helper Data to expand number of years so they are even for excel viz\n",
     "file_path = os.path.join(data_location, \"Region-Years.xlsx\")\n",
     "region_years = pd.read_excel(file_path, sheetname = \"Regions\")\n",
     "\n",
-    "\n",
-    "\n",
-    "#### Demand-Revenue Columns Mappings\n",
-    "\n",
+    "# Supply-Demand-Revenue Columns Mappings\n",
     "S_D_R_mapping = {'Demand-Trans.':'D-TRANS',\n",
     "                 'Demand-Grp.':'D-GRP',\n",
     "                 'Demand-Con.':'D-CON',\n",
@@ -182,27 +179,14 @@
     "                 'Revenue-Con.':'R-CON',\n",
     "                 'Revenue-Total':'R-TOTAL',\n",
     "                 'Supply-Total':'S-TOTAL'}\n",
-    "# S_D_R_cols = ['Year',\n",
-    "#               'Region',\n",
-    "#               'Month',\n",
-    "#               'Date',\n",
-    "#               'S-TOTAL',\n",
-    "#               'R-TOTAL',\n",
-    "#               'D-TOTAL',\n",
-    "#               'D-GRP',\n",
-    "#               'D-TRANS',\n",
-    "#               'D-CON',\n",
-    "#               'R-GRP',\n",
-    "#               'R-TRANS',\n",
-    "#               'R-CON']\n",
-    "\n",
+    "# Supply-Demand-Revenue Column Selection\n",
     "S_D_R_cols = ['Year',\n",
     "              'Region',\n",
     "              'Month',\n",
     "              'Date',\n",
     "              'S-TOTAL']\n",
     "\n",
-    "\n",
+    "# Column Order for output to excel\n",
     "column_order = [\n",
     "                'Region',\n",
     "                'Year',\n",
@@ -277,12 +261,12 @@
     "compset_hm_v1 = compset_hm = compset_hm[compset_oar_list]\n",
     "compset_hm_v2 = compset_hm_v1.rename(columns=compset_oar_mapping)\n",
     "\n",
-    "#Date & Time Manipulation\n",
+    "# Date & Time Manipulation\n",
     "compset_hm_v2['Date'] = pd.to_datetime(compset_hm_v2['Date'])\n",
     "compset_hm_v2['Month'] = compset_hm_v2['Date'].apply(lambda x: str(x.month))\n",
     "compset_hm_v2['Year'] = compset_hm_v2['Date'].apply(lambda x: str(x.year))\n",
     "\n",
-    "#String Manipulation\n",
+    "# String Manipulation\n",
     "compset_hm_v2['Region'] = compset_hm_v2['Region'].str.replace('+','')"
    ]
   },
@@ -299,19 +283,17 @@
     "tot_set = compset_hm_v2.append(m_cnty_v2)\n",
     "tot_set = pd.merge(tot_set, compset_econ_v1, on=['Region','Month','Year','Date'])\n",
     "\n",
-    "#tot_set = tot_set.append(m_city_v2) # These datasets differ\n",
-    "\n",
     "# Sort before Calculations (Do I need to do this?)\n",
     "tot_set = tot_set[(tot_set['Date'] < '2016-07-01') & (tot_set['Date'] > '2009-01-01')]\n",
     "tot_set = tot_set.sort_values(by=['Date'], ascending = True)\n",
     "tot_set = tot_set.round(2)\n",
     "tot_set = tot_set.reset_index()\n",
     "\n",
-    "#This is an IMPORTANT STEP-HERE WE APPLY OUR FISCAL YEAR (Jun-Jul) to the YEAR variable.\n",
+    "# This is an IMPORTANT STEP-HERE WE APPLY OUR FISCAL YEAR (Jun-Jul) to the YEAR variable.\n",
     "# Is this best practices? I don't think so... not sure. need training.\n",
     "tot_set['Year'] = tot_set['Date'].apply(getFiscalYear)\n",
     "\n",
-    "#String Manipulation, The mappings change over time, so we need to make sure all the names are consistent\n",
+    "# String Manipulation, The mappings change over time, so we need to make sure all the names are consistent\n",
     "tot_set = tot_set.replace({'Region':region_mapping})\n",
     "tot_set['Month'] = tot_set['Month'].apply(str)\n",
     "\n",
@@ -340,20 +322,18 @@
     "tot_set_v2 = tot_set[['Region','Year','Month','Date','S-TOTAL',\\\n",
     "                      'OCC_GRP','OCC_TRANS','OCC_CONT','OCC_TOTAL',\\\n",
     "                      'ADR_GRP','ADR_TRANS','ADR_CONT','ADR_TOTAL']]\n",
-    "#Create Excel Sheet and input tot_set_v2 as 'Raw-Data-1'\n",
+    "# Create Excel Sheet and input tot_set_v2 as 'Raw-Data-1'\n",
     "tot_set_v2.to_excel(writer, 'Raw-Data', index=False)\n",
-    "\n",
     "tot_set_v2['GRP_ROOMNIGHTS'] = (tot_set_v2['OCC_GRP']/100)*tot_set_v2['S-TOTAL']\n",
     "tot_set_v2['TRANS_ROOMNIGHTS'] = (tot_set_v2['OCC_TRANS']/100)*tot_set_v2['S-TOTAL']\n",
     "tot_set_v2['CONT_ROOMNIGHTS'] = (tot_set_v2['OCC_CONT']/100)*tot_set_v2['S-TOTAL']\n",
     "tot_set_v2['TOTAL_ROOMNIGHTS'] = (tot_set_v2['OCC_TOTAL']/100)*tot_set_v2['S-TOTAL']\n",
-    "\n",
     "tot_set_v2['GRP_REVENUE'] = tot_set_v2['ADR_GRP']*tot_set_v2['GRP_ROOMNIGHTS']\n",
     "tot_set_v2['TRANS_REVENUE'] = tot_set_v2['ADR_TRANS']*tot_set_v2['TRANS_ROOMNIGHTS']\n",
     "tot_set_v2['CONT_REVENUE'] = tot_set_v2['ADR_CONT']*tot_set_v2['CONT_ROOMNIGHTS']\n",
     "tot_set_v2['TOTAL_REVENUE'] = tot_set_v2['ADR_TOTAL']*tot_set_v2['TOTAL_ROOMNIGHTS']\n",
     "\n",
-    "#Create Excelk Sheet here and input tot_set_v2 as 'Raw-Data-2' Imputed\n",
+    "# Create Excelk Sheet here and input tot_set_v2 as 'Raw-Data-2' Imputed\n",
     "tot_set_v2.to_excel(writer, 'Raw-Data Imputed', index=False)"
    ]
   },
@@ -532,7 +512,6 @@
     "\n",
     "##########################################################################\n",
     "# Compute the metrics year over year percent change\n",
-    "\n",
     "small_group_agg['GRP_OCC_YOY'] = small_group_agg['GRP_OCCUPANCY'].pct_change(1)\n",
     "small_group_agg['TRANS_OCC_YOY'] = small_group_agg['TRANS_OCCUPANCY'].pct_change(1)\n",
     "small_group_agg['CONT_OCC_YOY'] = small_group_agg['CONT_OCCUPANCY'].pct_change(1)\n",
@@ -548,9 +527,8 @@
     "small_group_agg['CONT_RevPAR_YOY'] = small_group_agg['CONT_RevPAR'].pct_change(1)\n",
     "small_group_agg['TOTAL_RevPAR_YOY'] = small_group_agg['TOTAL_RevPAR'].pct_change(1)\n",
     "small_group_agg = small_group_agg[column_order]\n",
-    "#Create Excel sheet 'Small Group Set Aggregated'\n",
+    "# Create Excel sheet 'Small Group Set Aggregated'\n",
     "small_group_agg.to_excel(writer, 'Small Group Aggregated', index=False)\n",
-    "\n",
     "\n",
     "###########################################################################\n",
     "# Grab the large group competitive set and aggregate\n",
@@ -608,7 +586,7 @@
     "large_group_agg['CONT_RevPAR_YOY'] = large_group_agg['CONT_RevPAR'].pct_change(1)\n",
     "large_group_agg['TOTAL_RevPAR_YOY'] = large_group_agg['TOTAL_RevPAR'].pct_change(1)\n",
     "large_group_agg = large_group_agg[column_order]\n",
-    "#Create Excel sheet 'Large Group Set Aggregated'\n",
+    "# Create Excel sheet 'Large Group Set Aggregated'\n",
     "large_group_agg.to_excel(writer, 'Large Group Aggregated', index=False)\n"
    ]
   }
