--- a/notebooks/anas_hotel_metrics_annual.ipynb
+++ b/notebooks/anas_hotel_metrics_annual.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -292,7 +292,8 @@
     "\n",
     "# This is an IMPORTANT STEP-HERE WE APPLY OUR FISCAL YEAR (Jun-Jul) to the YEAR variable.\n",
     "# Is this best practices? I don't think so... not sure. need training.\n",
-    "tot_set['Year'] = tot_set['Date'].apply(getFiscalYear)\n",
+    "tot_set['Year'] = tot_set['Date'].apply(getFiscalYear)\\\n",
+    "\n",
     "\n",
     "# String Manipulation, The mappings change over time, so we need to make sure all the names are consistent\n",
     "tot_set = tot_set.replace({'Region':region_mapping})\n",
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -407,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -599,15 +600,6 @@
     "large_group_agg.to_excel(writer, 'Large Group Aggregated', index=False)\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
